WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
288473
Fix createElement[NS]'s customElements handling
https://bugs.webkit.org/show_bug.cgi?id=288473
Summary
Fix createElement[NS]'s customElements handling
Anne van Kesteren
Reported
2025-02-25 04:26:42 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-02-25 04:26:54 PST
<
rdar://problem/145557562
>
Anne van Kesteren
Comment 2
2025-02-25 04:39:24 PST
Pull request:
https://github.com/WebKit/WebKit/pull/41284
EWS
Comment 3
2025-02-25 22:02:39 PST
Committed
291093@main
(7ef666716729): <
https://commits.webkit.org/291093@main
> Reviewed commits have been landed. Closing PR #41284 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug