Source/WebCore/dom/Document.cpp
@@ -1489,53 +1489,56 @@ static inline bool isValidHTMLElementName(const QualifiedName& name)
 }
 
 template<typename NameType>
-static ExceptionOr<Ref<Element>> createHTMLElementWithNameValidation(TreeScope& treeScope, Document& document, const NameType& name, CustomElementRegistry* registry)
+static ExceptionOr<Ref<Element>> createHTMLElementWithNameValidation(Document& document, const NameType& name, CustomElementRegistry* registry)
 {
+    RefPtr element = HTMLElementFactory::createKnownElement(name, document);
+    if (LIKELY(element))
+        return Ref<Element> { element.releaseNonNull() };
+
+    if (!registry)
+        registry = document.customElementRegistry();
+
+    if (registry) {
+        if (RefPtr elementInterface = registry->findInterface(name))
+            return elementInterface->constructElementWithFallback(document, *registry, name);
+    }
+
+    if (UNLIKELY(!isValidHTMLElementName(name)))
+        return Exception { ExceptionCode::InvalidCharacterError };
+
+    return Ref<Element> { createUpgradeCandidateElement(document, registry, name) };
+}
+
+ExceptionOr<Ref<Element>> Document::createElementForBindings(const AtomString& name, std::optional<std::variant<String, ElementCreationOptions>>&& argument)
+{
+    Ref document = *this;
+    RefPtr<CustomElementRegistry> registry;
+    if (UNLIKELY(argument)) {
+        if (auto* options = std::get_if<ElementCreationOptions>(&*argument))
+            registry = options->customElements;
+    }
+
     auto result = [&]() -> ExceptionOr<Ref<Element>> {
-        RefPtr element = HTMLElementFactory::createKnownElement(name, document);
-        if (LIKELY(element))
-            return Ref<Element> { element.releaseNonNull() };
+        if (document->isHTMLDocument())
+            return createHTMLElementWithNameValidation(document, name.convertToASCIILowercase(), registry.get());
 
-        if (!registry)
-            registry = treeScope.customElementRegistry();
+        if (document->isXHTMLDocument())
+            return createHTMLElementWithNameValidation(document, name, registry.get());
 
-        if (UNLIKELY(registry)) {
-            if (RefPtr elementInterface = registry->findInterface(name))
-                return elementInterface->constructElementWithFallback(document, *registry, name);
-        }
+        if (!document->isValidName(name))
+            return Exception { ExceptionCode::InvalidCharacterError, makeString("Invalid qualified name: '"_s, name, '\'') };
 
-        if (UNLIKELY(!isValidHTMLElementName(name)))
-            return Exception { ExceptionCode::InvalidCharacterError };
-
-        return Ref<Element> { createUpgradeCandidateElement(document, registry, name) };
+        return createElement(QualifiedName(nullAtom(), name, nullAtom()), false);
     }();
 
+    if (result.hasException())
+        return result;
     if (UNLIKELY(registry && registry->isScoped())) {
-        if (result.hasException())
-            return result;
         Ref element = result.releaseReturnValue();
         CustomElementRegistry::addToScopedCustomElementRegistryMap(element, *registry);
         return element;
     }
-
     return result;
-
-}
-
-ExceptionOr<Ref<Element>> Document::createElementForBindings(const AtomString& name, const ElementCreationOptions& options)
-{
-    auto& document = documentScope();
-    RefPtr registry = options.customElements;
-    if (document.isHTMLDocument())
-        return createHTMLElementWithNameValidation(*this, document, name.convertToASCIILowercase(), registry.get());
-
-    if (document.isXHTMLDocument())
-        return createHTMLElementWithNameValidation(*this, document, name, registry.get());
-
-    if (!document.isValidName(name))
-        return Exception { ExceptionCode::InvalidCharacterError, makeString("Invalid qualified name: '"_s, name, '\'') };
-
-    return createElement(QualifiedName(nullAtom(), name, nullAtom()), false);
 }
 
 ExceptionOr<Ref<Element>> Document::createElementForBindings(const AtomString& name)
@@ -1909,9 +1912,15 @@ void Document::setActiveCustomElementRegistry(CustomElementRegistry* registry)
     m_activeCustomElementRegistry = registry;
 }
 
-ExceptionOr<Ref<Element>> Document::createElementNS(const AtomString& namespaceURI, const AtomString& qualifiedName)
+ExceptionOr<Ref<Element>> Document::createElementNS(const AtomString& namespaceURI, const AtomString& qualifiedName, std::optional<std::variant<String, ElementCreationOptions>>&& argument)
 {
-    Ref document = documentScope();
+    Ref document = *this;
+    RefPtr<CustomElementRegistry> registry;
+    if (UNLIKELY(argument)) {
+        if (auto* options = std::get_if<ElementCreationOptions>(&*argument))
+            registry = options->customElements;
+    }
+
     auto opportunisticallyMatchedBuiltinElement = ([&]() -> RefPtr<Element> {
         if (namespaceURI == xhtmlNamespaceURI)
             return HTMLElementFactory::createKnownElement(qualifiedName, document, nullptr, /* createdByParser */ false);
@@ -1924,20 +1933,36 @@ ExceptionOr<Ref<Element>> Document::createElementNS(const AtomString& namespaceU
         return nullptr;
     })();
 
-    if (LIKELY(opportunisticallyMatchedBuiltinElement))
-        return opportunisticallyMatchedBuiltinElement.releaseNonNull();
+    auto result = [&]() -> ExceptionOr<Ref<Element>> {
+        if (LIKELY(opportunisticallyMatchedBuiltinElement))
+            return opportunisticallyMatchedBuiltinElement.releaseNonNull();
 
-    auto parseResult = Document::parseQualifiedName(namespaceURI, qualifiedName);
-    if (parseResult.hasException())
-        return parseResult.releaseException();
-    QualifiedName parsedName { parseResult.releaseReturnValue() };
-    if (!Document::hasValidNamespaceForElements(parsedName))
-        return Exception { ExceptionCode::NamespaceError };
+        auto parseResult = Document::parseQualifiedName(namespaceURI, qualifiedName);
+        if (parseResult.hasException())
+            return parseResult.releaseException();
+        QualifiedName parsedName { parseResult.releaseReturnValue() };
+        if (!Document::hasValidNamespaceForElements(parsedName))
+            return Exception { ExceptionCode::NamespaceError };
 
-    if (parsedName.namespaceURI() == xhtmlNamespaceURI)
-        return createHTMLElementWithNameValidation(*this, documentScope(), parsedName, nullptr);
+        if (parsedName.namespaceURI() == xhtmlNamespaceURI)
+            return createHTMLElementWithNameValidation(document, parsedName, registry.get());
 
-    return createElement(parsedName, false, nullptr);
+        return createElement(parsedName, false);
+    }();
+
+    if (result.hasException())
+        return result;
+    if (UNLIKELY(registry && registry->isScoped())) {
+        Ref element = result.releaseReturnValue();
+        CustomElementRegistry::addToScopedCustomElementRegistryMap(element, *registry);
+        return element;
+    }
+    return result;
+}
+
+ExceptionOr<Ref<Element>> Document::createElementNS(const AtomString& namespaceURI, const AtomString& qualifiedName)
+{
+    return createElementNS(namespaceURI, qualifiedName, { });
 }
 
 DocumentEventTiming* Document::documentEventTimingFromNavigationTiming()
